--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+    "packages": ["packages/*"],
+    "version": "0.1.0",
+    "publishConfig": {
+        "access": "public"
+    },
+    "scripts": {
+        "build": "build"
+    }
 }
