--- a/packages/blendrunner/package.json
+++ b/packages/blendrunner/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@blendsdk/blendrunner",
-    "version": "0.1.0",
+    "version": "0.0.7",
     "description": "BlendSDK InBrowser Test Runner Framework",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
     "license": "MIT",
@@ -9,17 +9,15 @@
         "url": "https://github.com/blendsdk/blendsdk"
     },
     "scripts": {
-        "build": "npm run clean && npm run build:lib && npm run rollup && npm run dst && echo 'all done' && echo tests > dist/.npmignore",
+        "build": "npm run clean && npm run build:lib && npm run rollup && echo 'all done' && echo tests",
         "build:lib": "tsc -p ./",
-        "clean": "rimraf dist .build",
-        "dst": "dtscopy -s ./.build -d ./dist",
-        "rollup": "rollup -c",
-        "todo": "leasot -r vscode ./src/**/*.ts > TODO.md || true"
+        "clean": "rimraf dist",
+        "rollup": "rollup -c"
     },
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
     "browser": "dist/index.umd.js",
-    "types": "dist/src/index.d.ts",
+    "types": "dist/index.d.ts",
     "keywords": [
         "typescript",
         "framework",
@@ -33,5 +31,6 @@
         "test",
         "bdd",
         "unit testing"
-    ]
+    ],
+    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
 }
