--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
         "@types/node": "^10.12.12",
         "tslib": "^1.9.3"
     },
+    "scripts": {
+        "todo": "leasot -r vscode ./src/**/*.ts > TODO.md || true",
+        "test": "lerna run build && DEBUG=app:* node packages/tests/bin/www"
+    },
     "devDependencies": {
-        "@blendsdk/dtscopy": "^1.0.3",
         "leasot": "^6.6.2",
         "lerna": "^3.5.1",
+        "rimraf": "^2.6.2",
         "rollup": "^0.67.3",
         "rollup-plugin-commonjs": "^9.2.0",
         "rollup-plugin-json": "^3.1.0",
