--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
         "test": "lerna run build && DEBUG=app:* node packages/tests/bin/www"
     },
     "devDependencies": {
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.6.9",
+        "express": "~4.16.0",
         "leasot": "^6.6.2",
         "lerna": "^3.5.1",
+        "morgan": "~1.9.0",
         "rimraf": "^2.6.2",
         "rollup": "^0.67.3",
         "rollup-plugin-commonjs": "^9.2.0",
@@ -22,6 +26,7 @@
         "rollup-plugin-node-resolve": "^3.4.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "rollup-plugin-uglify": "^6.0.0",
-        "typescript": "^3.2.1"
+        "typescript": "^3.2.1",
+        "watch": "^1.0.2"
     }
 }
