--- a/packages/blendrunner/package.json
+++ b/packages/blendrunner/package.json
@@ -9,10 +9,10 @@
         "url": "https://github.com/blendsdk/blendsdk"
     },
     "scripts": {
-        "build": "npm run clean && npm run build:lib && npm run rollup && echo 'all done' && echo tests",
-        "build:lib": "tsc -p ./",
-        "clean": "rimraf dist",
-        "rollup": "rollup -c"
+        "build": "npm run clean && npm run build:lib && npm run rollup && echo 'all done'",
+        "build:lib": "../../node_modules/.bin/tsc -p ./",
+        "clean": "../../node_modules/.bin/rimraf .build dist",
+        "rollup": "../../node_modules/.bin/rollup --config"
     },
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
