--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -10,9 +10,9 @@
     },
     "scripts": {
         "build": "npm run clean && npm run build:lib && npm run rollup && echo 'all done'",
-        "build:lib": "tsc -p ./",
-        "clean": "rimraf dist .build",
-        "rollup": "rollup -c"
+        "build:lib": "../../node_modules/.bin/tsc -p ./",
+        "clean": "../../node_modules/.bin/rimraf .build dist",
+        "rollup": "../../node_modules/.bin/rollup --config"
     },
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
