--- a/packages/blendrunner/package.json
+++ b/packages/blendrunner/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@blendsdk/blendrunner",
-    "version": "0.0.7",
+    "version": "0.0.9",
     "description": "BlendSDK InBrowser Test Runner Framework",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
     "license": "MIT",
@@ -9,28 +9,22 @@
         "url": "https://github.com/blendsdk/blendsdk"
     },
     "scripts": {
-        "build": "npm run clean && npm run build:lib && npm run rollup && echo 'all done'",
+        "build": "npm run clean && npm run build:lib &&  echo 'all done'",
         "build:lib": "../../node_modules/.bin/tsc -p ./",
-        "clean": "../../node_modules/.bin/rimraf .build dist",
-        "rollup": "../../node_modules/.bin/rollup --config"
+        "clean": "../../node_modules/.bin/rimraf .build dist"
     },
-    "main": "dist/index.cjs.js",
-    "module": "dist/index.esm.js",
-    "browser": "dist/index.umd.js",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "keywords": [
         "typescript",
         "framework",
         "library",
+        "javascript",
         "html5",
         "UI",
-        "font-end",
-        "mvc",
-        "assert",
+        "components",
         "testing",
-        "test",
-        "bdd",
-        "unit testing"
+        "test framework"
     ],
     "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
 }
