--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "cookie-parser": "~1.4.3",
         "debug": "~2.6.9",
         "express": "~4.16.0",
+        "glob": "^7.1.3",
         "leasot": "^6.6.2",
         "lerna": "^3.5.1",
+        "mkdirp": "^0.5.1",
         "morgan": "~1.9.0",
         "rimraf": "^2.6.2",
         "rollup": "^0.67.3",
