--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "scripts": {
         "todo": "leasot -r vscode ./src/**/*.ts > TODO.md || true",
-        "test": "lerna run build && DEBUG=testapp:* packages/tests/bin/www"
+        "test": "lerna run build && DEBUG=testapp:* packages/tests/bin/www",
+        "tslint": "tslint -c ./tslint.json './packages/**/src/*.ts'"
     },
     "devDependencies": {
         "cookie-parser": "~1.4.3",
@@ -28,6 +29,7 @@
         "rollup-plugin-node-resolve": "^3.4.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "rollup-plugin-uglify": "^6.0.0",
+        "tslint": "^5.11.0",
         "typescript": "^3.2.1",
         "watch": "^1.0.2"
     }
