--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -9,9 +9,11 @@
         "url": "https://github.com/blendsdk/blendsdk"
     },
     "scripts": {
+        "watch": "../../node_modules/.bin/watch 'npm run build' ./src",
         "build": "npm run clean && npm run build:lib && echo 'all done'",
         "build:lib": "../../node_modules/.bin/tsc -p ./",
-        "clean": "../../node_modules/.bin/rimraf .build dist"
+        "clean": "../../node_modules/.bin/rimraf .build dist",
+        "tslint": "../../node_modules/.bin/tslint --config ../../tslint.json --project ./tsconfig.json"
     },
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
