--- a/packages/blendsdk/package.json
+++ b/packages/blendsdk/package.json
@@ -9,9 +9,11 @@
         "url": "https://github.com/blendsdk/blendsdk"
     },
     "scripts": {
-        "build": "npm run clean && npm run build:lib && npm run rollup",
+        "watch": "../../node_modules/.bin/watch 'npm run build' ./src",
+        "build": "npm run clean && npm run tslint && npm run build:lib && npm run rollup",
         "build:lib": "../../node_modules/.bin/tsc -p ./",
         "clean": "../../node_modules/.bin/rimraf .build dist",
+        "tslint": "../../node_modules/.bin/tslint --config ../../tslint.json --project ./tsconfig.json",
         "rollup": "../../node_modules/.bin/rollup --config"
     },
     "main": "dist/index.cjs.js",
