--- a/packages/blendrunner/package.json
+++ b/packages/blendrunner/package.json
@@ -28,5 +28,8 @@
         "testing",
         "test framework"
     ],
-    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
+    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9",
+    "devDependencies": {
+        "@types/html2canvas": "0.0.35"
+    }
 }
