--- a/packages/ajax/package.json
+++ b/packages/ajax/package.json
@@ -18,8 +18,8 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "dependencies": {
-        "@blendsdk/core": "0.0.9",
-        "@blendsdk/mvc": "0.0.9"
+        "@blendsdk/core": "^0.0.9",
+        "@blendsdk/mvc": "^0.0.9"
     },
     "keywords": [
         "typescript",
