--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -16,9 +16,9 @@
         "tslint": "../../node_modules/.bin/tslint --config ../../tslint.json --project ./tsconfig.json"
     },
     "dependencies": {
-        "@blendsdk/core": "0.0.9",
-        "@blendsdk/dom": "0.0.9",
-        "@blendsdk/css": "0.0.9"
+        "@blendsdk/core": "^0.0.9",
+        "@blendsdk/css": "^0.0.9",
+        "@blendsdk/dom": "^0.0.9"
     },
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
