--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -27,7 +27,7 @@
         "components"
     ],
     "dependencies": {
-        "@blendsdk/core": "0.0.9"
+        "@blendsdk/core": "^0.0.9"
     },
     "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
 }
