--- a/packages/mvc/package.json
+++ b/packages/mvc/package.json
@@ -18,7 +18,7 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "dependencies": {
-        "@blendsdk/core": "0.0.9"
+        "@blendsdk/core": "^0.0.9"
     },
     "keywords": [
         "typescript",
