--- a/packages/blendsdk/package.json
+++ b/packages/blendsdk/package.json
@@ -9,12 +9,12 @@
         "url": "https://github.com/blendsdk/blendsdk"
     },
     "scripts": {
-        "watch": "../../node_modules/.bin/watch 'npm run build' ./src",
-        "build": "npm run clean && npm run tslint && npm run build:lib && npm run rollup",
-        "build:lib": "../../node_modules/.bin/tsc -p ./",
-        "clean": "../../node_modules/.bin/rimraf .build dist",
-        "tslint": "../../node_modules/.bin/tslint --config ../../tslint.json --project ./tsconfig.json",
-        "rollup": "../../node_modules/.bin/rollup --config"
+        "watch": "tsc -w",
+        "build": "npm run clean && npm run tslint && npm run build:lib",
+        "build:lib": "tsc -p ./",
+        "clean": "rimraf .build dist",
+        "tslint": "tslint --config ../../tslint.json --project ./tsconfig.json",
+        "rollup": "rollup --config ./rollup.config.json"
     },
     "main": "dist/index.cjs.js",
     "module": "dist/index.esm.js",
@@ -29,5 +29,10 @@
         "UI",
         "components"
     ],
-    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
+    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9",
+    "devDependencies": {
+        "rimraf": "^2.6.3",
+        "tslint": "^5.12.1",
+        "typescript": "^3.3.1"
+    }
 }
