--- a/package.json
+++ b/package.json
@@ -2,34 +2,15 @@
     "name": "blendsdk",
     "description": "BlendSDK HTML5 Web Application Framework for TypeScript",
     "private": true,
-    "dependencies": {
-        "@types/node": "^10.12.12",
+    "devDependencies": {
+        "@types/node": "^10.12.21",
+        "leasot": "^7.2.0",
+        "lerna": "^3.10.8",
         "tslib": "^1.9.3"
     },
     "scripts": {
-        "todo": "leasot -r vscode ./src/**/*.ts > TODO.md || true",
+        "watch": "lerna run  watch --parallel",
+        "todo": "leasot -r vscode ./packages/**/**/src/*.ts > TODO.md || true",
         "test": "lerna run build && DEBUG=testapp:* packages/tests/bin/www"
-    },
-    "devDependencies": {
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.6.9",
-        "express": "~4.16.0",
-        "glob": "^7.1.3",
-        "leasot": "^6.6.2",
-        "lerna": "^3.5.1",
-        "mkdirp": "^0.5.1",
-        "morgan": "~1.9.0",
-        "rimraf": "^2.6.2",
-        "rollup": "^0.67.3",
-        "rollup-plugin-commonjs": "^9.2.0",
-        "rollup-plugin-json": "^3.1.0",
-        "rollup-plugin-node-builtins": "^2.1.2",
-        "rollup-plugin-node-globals": "^1.4.0",
-        "rollup-plugin-node-resolve": "^3.4.0",
-        "rollup-plugin-sourcemaps": "^0.4.2",
-        "rollup-plugin-uglify": "^6.0.0",
-        "tslint": "^5.11.0",
-        "typescript": "^3.2.1",
-        "watch": "^1.0.2"
     }
 }
