--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -35,6 +35,7 @@
     ],
     "devDependencies": {
         "rimraf": "^2.6.3",
-        "tslint": "^5.12.1"
+        "tslint": "^5.12.1",
+        "typescript": "^3.3.1"
     }
 }
