--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,13 @@
 {
-    "packages": [
-        "packages/*"
-    ],
+    "packages": ["packages/*"],
     "version": "0.0.16",
     "publishConfig": {
         "access": "public"
+    },
+    "command": {
+        "bootstrap": {
+            "npmClientArgs": ["--no-package-lock"]
+        }
     },
     "scripts": {
         "build": "build",
