--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
     "name": "blendsdk",
     "description": "BlendSDK HTML5 Web Application Framework for TypeScript",
     "private": true,
+    "version": "0.0.16",
     "devDependencies": {
         "@types/node": "^10.12.21",
+        "colors": "^1.3.3",
+        "install": "^0.12.2",
         "leasot": "^7.2.0",
         "lerna": "^3.10.8",
-        "tslib": "^1.9.3"
+        "npm": "^6.7.0",
+        "semver": "^5.6.0",
+        "semver-increment": "^1.0.0",
+        "shelljs": "^0.8.3",
+        "tslib": "^1.9.3",
+        "yesno": "^0.2.0"
     },
     "scripts": {
         "watch": "lerna run  watch --parallel",
+        "build": "lerna run build",
         "todo": "leasot -r vscode ./packages/**/**/src/*.ts > TODO.md || true",
         "test": "lerna run build && DEBUG=testapp:* packages/tests/bin/www"
     }
