--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "scripts": {
         "watch": "lerna run  watch --parallel",
         "build": "lerna run build",
+        "bump": "lerna version --no-git-tag-version --no-push ",
         "todo": "leasot -r vscode ./packages/**/**/src/*.ts > TODO.md || true",
         "test": "lerna run build && DEBUG=testapp:* packages/tests/bin/www"
     }
