--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,16 @@
 {
-    "packages": ["packages/*"],
-    "version": "0.0.16",
+    "packages": [
+        "packages/*"
+    ],
+    "version": "0.0.17",
     "publishConfig": {
         "access": "public"
     },
     "command": {
         "bootstrap": {
-            "npmClientArgs": ["--no-package-lock"]
+            "npmClientArgs": [
+                "--no-package-lock"
+            ]
         }
     },
     "scripts": {
