--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,8 @@
         "@blendsdk/core": "^0.0.43",
         "@blendsdk/css": "^0.0.43",
         "@blendsdk/dom": "^0.0.43",
-        "@blendsdk/mvc": "^0.0.43"
+        "@blendsdk/mvc": "^0.0.43",
+        "@blendsdk/icon": "^0.0.43"
     },
     "keywords": [
         "typescript",
