--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -22,7 +22,9 @@
         "@blendsdk/core": "^0.0.65",
         "@blendsdk/css": "^0.0.65",
         "@blendsdk/mvc": "^0.0.65",
-        "@blendsdk/ui": "^0.0.65"
+        "@blendsdk/dom": "^0.0.65",
+        "@blendsdk/ui": "^0.0.65",
+        "@blendsdk/task": "^0.0.65"
     },
     "keywords": [
         "typescript",
