--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@blendsdk/form",
-    "version": "0.0.65",
+    "version": "0.0.66",
     "description": "TODO",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
     "license": "MIT",
@@ -18,13 +18,13 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "dependencies": {
-        "@blendsdk/browser": "^0.0.65",
-        "@blendsdk/core": "^0.0.65",
-        "@blendsdk/css": "^0.0.65",
-        "@blendsdk/mvc": "^0.0.65",
-        "@blendsdk/dom": "^0.0.65",
-        "@blendsdk/ui": "^0.0.65",
-        "@blendsdk/task": "^0.0.65"
+        "@blendsdk/browser": "^0.0.66",
+        "@blendsdk/core": "^0.0.66",
+        "@blendsdk/css": "^0.0.66",
+        "@blendsdk/dom": "^0.0.66",
+        "@blendsdk/mvc": "^0.0.66",
+        "@blendsdk/task": "^0.0.66",
+        "@blendsdk/ui": "^0.0.66"
     },
     "keywords": [
         "typescript",
