Renamed the package to forms.

--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@blendsdk/form",
+    "name": "@blendsdk/forms",
     "version": "0.0.67",
     "description": "TODO",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
