--- a/packages/blendsdk/package.json
+++ b/packages/blendsdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@blendsdk/blendsdk",
-    "version": "0.0.79",
+    "version": "0.0.80",
     "description": "The BlendSDK main package collection",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
     "license": "MIT",
@@ -27,22 +27,22 @@
         "components"
     ],
     "dependencies": {
-        "@blendsdk/ajax": "^0.0.79",
-        "@blendsdk/application": "^0.0.79",
-        "@blendsdk/blendrunner": "^0.0.79",
-        "@blendsdk/browser": "^0.0.79",
-        "@blendsdk/core": "^0.0.79",
-        "@blendsdk/css": "^0.0.79",
-        "@blendsdk/deviceinfo": "^0.0.79",
-        "@blendsdk/dom": "^0.0.79",
-        "@blendsdk/extensions": "^0.0.79",
-        "@blendsdk/forms": "^0.0.79",
-        "@blendsdk/icon": "^0.0.79",
-        "@blendsdk/mvc": "^0.0.79",
-        "@blendsdk/task": "^0.0.79",
-        "@blendsdk/ui": "^0.0.79",
-        "@blendsdk/uistack": "^0.0.79",
-        "@blendsdk/viewrouter": "^0.0.79",
+        "@blendsdk/ajax": "^0.0.80",
+        "@blendsdk/application": "^0.0.80",
+        "@blendsdk/blendrunner": "^0.0.80",
+        "@blendsdk/browser": "^0.0.80",
+        "@blendsdk/core": "^0.0.80",
+        "@blendsdk/css": "^0.0.80",
+        "@blendsdk/deviceinfo": "^0.0.80",
+        "@blendsdk/dom": "^0.0.80",
+        "@blendsdk/extensions": "^0.0.80",
+        "@blendsdk/forms": "^0.0.80",
+        "@blendsdk/icon": "^0.0.80",
+        "@blendsdk/mvc": "^0.0.80",
+        "@blendsdk/task": "^0.0.80",
+        "@blendsdk/ui": "^0.0.80",
+        "@blendsdk/uistack": "^0.0.80",
+        "@blendsdk/viewrouter": "^0.0.80",
         "rimraf": "^2.6.3",
         "rollup": "^1.10.1",
         "rollup-plugin-commonjs": "^9.3.4",
@@ -56,6 +56,5 @@
         "tslint": "^5.16.0",
         "typescript": "^3.4.5"
     },
-    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9",
-    "devDependencies": {}
+    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
 }
