--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@blendsdk/cli",
-    "version": "0.0.79",
+    "version": "0.0.80",
     "description": "The BlendSDK CLI Utility",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
     "license": "MIT",
@@ -39,12 +39,12 @@
         "ejs": "^2.6.1",
         "glob": "^7.1.3",
         "mkdirp": "^0.5.1",
+        "npm-check-updates": "^3.1.8",
         "rimraf": "^2.6.3",
         "shelljs": "^0.8.3",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
-		"yargs": "^13.2.2",
-        "npm-check-updates": "^3.1.8"
+        "yargs": "^13.2.2"
     },
     "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
 }
