--- a/packages/blendsdk/package.json
+++ b/packages/blendsdk/package.json
@@ -51,6 +51,7 @@
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-node-resolve": "^4.2.3",
         "rollup-plugin-node-resolve-magic": "^0.2.11",
+        "rollup-plugin-sass": "^1.2.2",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "rollup-plugin-uglify": "^6.0.2",
         "tslint": "^5.16.0",
