--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@blendsdk/cli",
-    "version": "0.0.80",
+    "version": "0.0.81",
     "description": "The BlendSDK CLI Utility",
     "author": "Gevik Babakhani <gevik@blendjs.com>",
     "license": "MIT",
@@ -33,6 +33,7 @@
         "@types/ejs": "^2.6.3",
         "@types/glob": "^7.1.1",
         "@types/mkdirp": "^0.5.2",
+        "@types/shelljs": "^0.8.5",
         "@types/ws": "^6.0.1",
         "@types/yargs": "^13.0.0",
         "chalk": "^2.4.2",
@@ -47,10 +48,7 @@
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
         "ws": "^6.2.1",
-		"yargs": "^13.2.2",
-		"@types/shelljs": "^0.8.5"
+        "yargs": "^13.2.2"
     },
-    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9",
-    "devDependencies": {
-    }
+    "gitHead": "3cf0c717504e5e6ee768f9423eec41a997662df9"
 }
