--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,6 +44,7 @@
         "npm-check-updates": "^3.1.8",
         "rimraf": "^2.6.3",
         "rollup": "^1.10.1",
+        "serve": "^11.0.0",
         "shelljs": "^0.8.3",
         "tslint": "^5.16.0",
         "typescript": "^3.4.5",
