--- a/packages/cli/templates/app/basic/package.json
+++ b/packages/cli/templates/app/basic/package.json
@@ -8,7 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "blendsdk build:prod",
 		"build:dev": "blendsdk build:dev",
-		"serve": "blendsdk serve"
+		"serve": "blendsdk serve --port 8090"
     },
     "keywords": [],
     "author": "",
