--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
         "@types/ejs": "^2.6.3",
         "@types/glob": "^7.1.1",
         "@types/mkdirp": "^0.5.2",
+        "@types/rimraf": "^2.0.2",
         "@types/shelljs": "^0.8.5",
         "@types/ws": "^6.0.1",
         "@types/yargs": "^13.0.0",
